# Quill

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_gemini.py  tree.txt  venv_tree.txt
src/quill/: __init__.py  __main__.py  cli.py  config.py  generator.py  utils.py
src/quill/logger/: __init__.py  logger.py
src/readme_generator/: __init__.py  __main__.py  cli.py  generator.py  utils.py
src/readme_generator/logger/: __init__.py  logger.py
tests/: conftest.py
venv_3.12/: pyvenv.cfg
