[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quill"
version = "1.0.0"
description = "Generate comprehensive README files for your project via LLM"
readme = "README.md"
requires-python = ">=3.9,<3.13"  
authors = [
    { name = "Rober", email = "your.email@example.com" }
]
dependencies = [
    "google-generativeai>=0.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "repopack>=0.1.4",

]

classifiers = [  # Added classifiers for PyPI
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

keywords = ["readme", "documentation", "generator", "AI", "Gemini", "LLM"]

[
project.urls]  
Repository = "https://github.com/usedispatch/Quill"
Issues = "https://github.com/usedispatch/Quill"
=======
keywords = ["readme", "documentation", "generator", "AI", "Gemini"]

[project.scripts]
quill = "quill.__main__:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]