[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quill"
version = "1.0.0"
description = "Generate comprehensive README files for your project via LLM"
authors = ["Robert <robert@arweave.org>"]
readme = "README.md"
license = "MIT"

homepage = "https://github.com/usedispatch/Quill"
repository = "https://github.com/usedispatch/Quill"
documentation = "https://github.com/usedispatch/Quill#readme"
keywords = ["readme", "documentation", "generator", "AI", "Gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation"
]

packages = [
    { include = "quill", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"  # Move the requires-python key here
google-generativeai = ">=0.2.0"
python-dotenv = ">=1.0.0"
rich = ">=13.7.0"
repopack = ">=0.1.4"

[tool.poetry.scripts]
quill = "quill.__main__:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]